salesforce_configs/metadata_configurations/endpoints/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>telia_SalesType__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Money-New Services</fullName>
                    <default>true</default>
                    <label>New Money-New Services</label>
                </value>
                <value>
                    <fullName>New Money-Extending Services</fullName>
                </value>
                <value>
                    <fullName>Renegotiation-Service Replacement</fullName>
                </value>
                <value>
                    <fullName>Renegotiation-Service Continuation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_Sales_Responsible_Segment__c</fullName>
        <formula>TEXT(Account.telia_sales_responsible_segment__c)</formula>
        <label>Sales Responsible Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Possible Service Account linked to Parent Account of the Opportunity</description>
        <inlineHelpText>Please enter Service Account or leave blank.</inlineHelpText>
        <label>Service Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Group</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Service Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Service_Address__c</fullName>
        <formula>IF(ISBLANK(telia_Service_Account__c),
Account.ShippingStreet, 
telia_Service_Account__r.ShippingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for contracts with Service Agreement record type</description>
        <label>Service Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contract.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Agreement</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>telia_Service_City__c</fullName>
        <formula>IF(ISBLANK(telia_Service_Account__c), 
Account.ShippingCity, 
telia_Service_Account__r.ShippingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Country__c</fullName>
        <formula>IF(ISBLANK(telia_Service_Account__c), 
Account.ShippingCountry, 
telia_Service_Account__r.ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Service_Pcode__c</fullName>
        <formula>IF(ISBLANK(telia_Service_Account__c), 
Account.ShippingPostalCode, 
telia_Service_Account__r.ShippingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Show_Current_User__c</fullName>
        <description>Shows Records that are Created By current user</description>
        <formula>IF(CreatedById = $User.Id, 1,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show Current User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>telia_SyncedQuote__c</fullName>
        <label>Synced Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_User_ID__c</fullName>
        <formula>$User.Alias</formula>
        <label>Telia User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telia_Weighted_Opportunity_Value__c</fullName>
        <description>This calculates Weighted Opportunity Value</description>
        <formula>telia_Revenue_Total_Rollup__c *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>telia_manual_availability_response__c</fullName>
        <description>This field contains manual availability response from sproject</description>
        <label>Manual Availability Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>telia_needFYRRecalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is set to true after any Opportunity/Quote/Products related update and indicates that Revenue and FYR values will be recalculated during a daily batch job. After recalculation it will be set to false automatically.</inlineHelpText>
        <label>Need FYR Recalculation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>telia_opportunity_status__c</fullName>
        <label>Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>In_Progress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Offer_Sent</fullName>
                    <label>Offer Sent</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Not Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_partner__c</fullName>
        <label>Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture Oy</fullName>
                </value>
                <value>
                    <fullName>AinaCom Oy</fullName>
                </value>
                <value>
                    <fullName>Aina Group Oyj</fullName>
                </value>
                <value>
                    <fullName>Anvia Oyj</fullName>
                </value>
                <value>
                    <fullName>Atea Finland Oy</fullName>
                </value>
                <value>
                    <fullName>British Telecom</fullName>
                </value>
                <value>
                    <fullName>Benemen</fullName>
                </value>
                <value>
                    <fullName>CGI</fullName>
                </value>
                <value>
                    <fullName>DataCenter Finland</fullName>
                </value>
                <value>
                    <fullName>Digia</fullName>
                </value>
                <value>
                    <fullName>Enfo</fullName>
                </value>
                <value>
                    <fullName>Equinix</fullName>
                </value>
                <value>
                    <fullName>Fonecta</fullName>
                </value>
                <value>
                    <fullName>F-Secure</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Lead Desk</fullName>
                </value>
                <value>
                    <fullName>NetPlaza</fullName>
                </value>
                <value>
                    <fullName>Nordic LAN &amp; WAN</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Tata - TCS</fullName>
                </value>
                <value>
                    <fullName>Tieto</fullName>
                </value>
                <value>
                    <fullName>Wipro</fullName>
                </value>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>Colt</fullName>
                </value>
                <value>
                    <fullName>Globetel</fullName>
                </value>
                <value>
                    <fullName>KPN</fullName>
                </value>
                <value>
                    <fullName>Nothern Telecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>telia_source__c</fullName>
        <description>Source of the opportunity</description>
        <inlineHelpText>Opportunity source</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KL-puhesopimus</fullName>
                </value>
                <value>
                    <fullName>KL-videosopimus</fullName>
                </value>
                <value>
                    <fullName>KLVP sopimus</fullName>
                </value>
                <value>
                    <fullName>KY-verkko</fullName>
                </value>
                <value>
                    <fullName>BizTech 2016</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>nn</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                    <isActive>false</isActive>
                    <label>Case Management</label>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                    <isActive>false</isActive>
                    <label>Customer Care</label>
                </value>
                <value>
                    <fullName>Kauppiasliidi</fullName>
                    <isActive>false</isActive>
                    <label>Kauppiasliidi</label>
                </value>
                <value>
                    <fullName>sonera.fi-liidi</fullName>
                    <isActive>false</isActive>
                    <label>sonera.fi-liidi</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AccountSLA__c</fullName>
        <formula>TEXT(Account.vlocity_cmt__vSLA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOneTimeTotal__c</fullName>
        <label>Effective One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveOpportunityTotal__c</fullName>
        <formula>vlocity_cmt__EffectiveOneTimeTotal__c + ( vlocity_cmt__EffectiveRecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveRecurringTotal__c</fullName>
        <label>Effective Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__EffectiveRecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FollowUpTo__c</fullName>
        <description>If this activity is a follow up to a previous Activity</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FrameContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Frame contract linked to this opportunity</description>
        <label>Frame Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsContractRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if opportunity requires a contract</description>
        <label>Require Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberOfContractedMonths__c</fullName>
        <label>Number Of Contracted Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <label>One Time Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__OneTimeTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityTotal__c</fullName>
        <formula>vlocity_cmt__OneTimeTotal__c + ( vlocity_cmt__RecurringTotal__c * vlocity_cmt__NumberOfContractedMonths__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingChannel__c</fullName>
        <description>Channel can be used to drive Eligibility/Compatibility/Recommendations/Pricing/Other implementations, e.g. Certain Product Bundles are only available on the Web or Call Center channel but not via the Retail and Dealer channels OR A product may have a different price when sold via the Web than sold via the Retail channel, etc.</description>
        <label>Originating Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginatingContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the contract from which this opportunity was created</description>
        <label>Originating Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The referral source of an opportunity</description>
        <label>Referral Source</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <label>Recurring Total</label>
        <summarizedField>OpportunityLineItem.vlocity_cmt__RecurringTotal__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingPostalCode__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ShippingState__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationDate__c</fullName>
        <description>Date when the validation was last run</description>
        <inlineHelpText>Last validation date</inlineHelpText>
        <label>Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationMessage__c</fullName>
        <description>Message from last validation run</description>
        <inlineHelpText>Message from last validation run</inlineHelpText>
        <label>Validation Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidationStatus__c</fullName>
        <description>Validation Status</description>
        <inlineHelpText>If an opportunity has been validated, it will show the status Passed or Failed. If no validation has been run yet, it will show Not yet run.</inlineHelpText>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not yet run</fullName>
                    <default>true</default>
                    <label>Not yet run</label>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>B2B_DigiSales</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>ginte</value>
        </filters>
        <filters>
            <field>telia_source__c</field>
            <operation>equals</operation>
            <value>Customer Service</value>
        </filters>
        <label>B2B DigiSales</label>
        <sharedTo>
            <group>B2B_DigiSales</group>
            <group>B2B_SME_DigiSales_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Priority_Flag__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>My_All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Analyse Prospect,Prepare Solution Proposal,Negotiate and Close</value>
        </filters>
        <label>My All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_All_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>telia_FYR_book_value__c</columns>
        <columns>Priority_Flag__c</columns>
        <columns>telia_source__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My All  Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>B2O_Closed_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Closed Opportunity Process</businessProcess>
        <description>Closed opportunity record type to B2O opportunity</description>
        <label>B2O Closed Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2O_Opportunity</fullName>
        <active>true</active>
        <businessProcess>B2O Sales Process</businessProcess>
        <description>Record type for B2O Sales Process</description>
        <label>B2O Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Closed Opportunity Process</businessProcess>
        <label>Closed Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Opportunity</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Sales Process</businessProcess>
        <description>Used for basic sales process</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneOpportunity</fullName>
        <active>true</active>
        <businessProcess>vlocity_cmt__Vlocity Sales Process</businessProcess>
        <description>Mobile Phone Opportunity</description>
        <label>MobilePhoneOpportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cancelled_after_Analyse_Prospect</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; TEXT(StageName) = &quot;Cancelled&quot; &amp;&amp; TEXT(PRIORVALUE(StageName)) &lt;&gt; &quot;Analyse Prospect&quot;</errorConditionFormula>
        <errorMessage>You can set opportunity stage to Cancelled only if previously stage was Analyse Prospect</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CloseReason_mandatory_when_closing</fullName>
        <active>true</active>
        <description>When opportunity is being closed, Close Reason field is required to be filled</description>
        <errorConditionFormula>(
(ISPICKVAL(StageName,&quot;Closed Lost&quot;)
|| ISPICKVAL(StageName,&quot;Cancelled&quot;)
|| ISPICKVAL(StageName,&quot;Closed Not Won&quot;)) &amp;&amp; NOT(
ISPICKVAL(telia_Close_Reason__c,&quot;08 Other&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;09 Customer Postponed&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;10 Winning Probability Low&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;11 Business Not Feasible&quot;)||
ISPICKVAL(telia_Close_Reason__c,&quot;12 Customer Lost Their Case&quot;))
) || (
ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp; NOT(
ISPICKVAL(telia_Close_Reason__c,&quot;01 Relationship&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;02 Total solution&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;03 Service performance&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;04 Technology&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;05 Availability&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;06 Price&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;07 Financing&quot;) ||
ISPICKVAL(telia_Close_Reason__c,&quot;08 Other&quot;))
)</errorConditionFormula>
        <errorDisplayField>telia_Close_Reason__c</errorDisplayField>
        <errorMessage>Please provide appropriate Close Reason when closing Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_cannot_be_set_in_the_past</fullName>
        <active>true</active>
        <description>User cannot select Close date from the past.</description>
        <errorConditionFormula>AND(ISNEW()
&amp;&amp;
NOT(IsClosed)
&amp;&amp;
CloseDate &lt; TODAY())</errorConditionFormula>
        <errorMessage>Close date cannot be in past. Please change close date to today or future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_comment_needs_to_be_added</fullName>
        <active>true</active>
        <description>Close comment needs to be added if opportunity stage is set to closed lost or cancelled</description>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;)
&amp;&amp;
ISBLANK(telia_Close_Comment__c)
||
ISPICKVAL(StageName, &quot;Cancelled&quot;)
&amp;&amp;
ISBLANK(telia_Close_Comment__c)
||
ISPICKVAL(StageName, &quot;Closed Not Won&quot;)
&amp;&amp;
ISBLANK(telia_Close_Comment__c)
||
ISPICKVAL(StageName, &quot;Closed Won&quot;)
&amp;&amp;
ISBLANK(telia_Close_Comment__c)</errorConditionFormula>
        <errorDisplayField>telia_Close_Comment__c</errorDisplayField>
        <errorMessage>Please provide brief description why opportunity was Won or Lost/Cancelled to Close comment - field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Oppty_cant_be_won_without_products</fullName>
        <active>true</active>
        <description>Validates that an opportunity has opportunity products before the Stage can move beyond Closed Won.</description>
        <errorConditionFormula>AND (
  CASE( StageName,
     &quot;Closed Won&quot;, 1,
     0) = 1,
  NOT(HasOpportunityLineItem)
)</errorConditionFormula>
        <errorMessage>It is not possible to close Opportunity as &quot;Closed Won&quot;  without configured products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quality_description_needs_to_be_added</fullName>
        <active>true</active>
        <description>Quality Rating description needs to be added before closing.</description>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;) 
&amp;&amp; 
ISBLANK(telia_Quality_Rating_Description__c) 
|| 
ISPICKVAL(StageName, &quot;Cancelled&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;) 
&amp;&amp; 
ISBLANK(telia_Quality_Rating_Description__c) 
|| 
ISPICKVAL(StageName, &quot;Closed Not Won&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;) 
&amp;&amp; 
ISBLANK(telia_Quality_Rating_Description__c) 
|| 
ISPICKVAL(StageName, &quot;Closed Won&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;) 
&amp;&amp; 
ISBLANK(telia_Quality_Rating_Description__c) 
|| 
ISPICKVAL(StageName, &quot;Closed Lost&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;) 
&amp;&amp; 
ISBLANK(telia_Quality_Rating_Description__c)</errorConditionFormula>
        <errorDisplayField>telia_Quality_Rating_Description__c</errorDisplayField>
        <errorMessage>Please provide value to Quality Rating Description - field before closing opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quality_needs_to_be_added_before_closing</fullName>
        <active>true</active>
        <description>Source quality needs to be added before closing the opportunity.</description>
        <errorConditionFormula>ISPICKVAL(StageName, &quot;Closed Lost&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;)
&amp;&amp;
ISPICKVAL( telia_Rating__c , &quot;&quot;)
|| 
ISPICKVAL(StageName, &quot;Cancelled&quot;) 
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;)
&amp;&amp;
ISPICKVAL( telia_Rating__c , &quot;&quot;)
|| 
ISPICKVAL(StageName, &quot;Closed Not Won&quot;)
&amp;&amp; 
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;)
&amp;&amp;
ISPICKVAL( telia_Rating__c , &quot;&quot;)
|| 
ISPICKVAL(StageName, &quot;Closed Won&quot;) 
&amp;&amp;
ISPICKVAL( telia_source__c , &quot;Customer Service&quot;)
&amp;&amp;
ISPICKVAL( telia_Rating__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>telia_Rating__c</errorDisplayField>
        <errorMessage>Please provide value to Quality Rating - field before closing opportunity.</errorMessage>
    </validationRules>
</CustomObject>